--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,6 +44,13 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+# Default database configuration using MySQL database engine
+# Connect to playdb as playdbuser
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc: mysql://b92ae522f3d485:457c0e66@us-cdbr-east-06.cleardb.net"
+#db.default.user=b92ae522f3d485
+#db.default.pass="457c0e66"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
